# codeowners

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: main.rs
codeowners/: all.html  enum.Owner.html  fn.from_path.html  fn.from_reader.html  fn.locate.html  index.html  struct.Owners.html
implementors/core/cmp/: trait.PartialEq.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Send.js  trait.Sync.js
implementors/core/str/: trait.FromStr.js
lib/: Cargo.toml
src/: lib.rs
src/codeowners/: lib.rs.html  main.rs.html
