[package]
name = "codeowners"
version = "0.1.3"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Rust bindings for Github CODEOWNERS files"
readme = "README.md"
homepage = "https://github.com/softprops/codeowners"
documentation = "https://softprops.github.io/codeowners"
repository = "https://github.com/softprops/codeowners"
license = "MIT"
keywords = ["github", "owners", "ownership"]
edition = "2018"

[badges]
travis-ci = { repository = "softprops/codeowners" }
coveralls = { repository = "softprops/codeowners" }

[dev-dependencies]
pretty_assertions = "0.6"

[dependencies]
glob = "0.3"
regex = "1.2"
lazy_static = "1.4"
